@@ -29,7 +29,6 @@ import java.util.List;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.Callable;
-import java.util.stream.Collectors;
 
 import org.gradle.api.DefaultTask;
 import org.gradle.api.Task;
@@ -51,8 +50,6 @@ import org.springframework.core.CollectionFactory;
  */
 public class AutoConfigurationMetadata extends DefaultTask {
 
-	private static final String IMPORTS_FILE_PATH = "META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports";
-
 	private static final String COMMENT_START = "#";
 
 	private SourceSet sourceSet;
@@ -60,7 +57,9 @@ public class AutoConfigurationMetadata extends DefaultTask {
 	private File outputFile;
 
 	public AutoConfigurationMetadata() {
-		getInputs().file((Callable<File>) this::findAutoConfigurationImportsFile)
+		getInputs()
+				.file((Callable<File>) () -> new File(this.sourceSet.getOutput().getResourcesDir(),
+						"META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports"))
 				.withPathSensitivity(PathSensitivity.RELATIVE)
 				.withPropertyName("org.springframework.boot.autoconfigure.AutoConfiguration");
 
@@ -118,13 +117,13 @@ public class AutoConfigurationMetadata extends DefaultTask {
 	 * @return auto-configurations
 	 */
 	private List<String> readAutoConfigurationsFile() throws IOException {
-		File file = findAutoConfigurationImportsFile();
-		if (file == null) {
+		File file = new File(this.sourceSet.getOutput().getResourcesDir(),
+				"META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports");
+		if (!file.exists()) {
 			return Collections.emptyList();
 		}
 		try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
-			return reader.lines().map(this::stripComment).filter((line) -> !line.isEmpty())
-					.collect(Collectors.toList());
+			return reader.lines().map(this::stripComment).filter((line) -> !line.isEmpty()).toList();
 		}
 	}
 
@@ -136,17 +135,10 @@ public class AutoConfigurationMetadata extends DefaultTask {
 		return line.substring(0, commentStart).trim();
 	}
 
-	private File findAutoConfigurationImportsFile() {
-		return findFileInClassesDirs(IMPORTS_FILE_PATH);
-	}
-
 	private File findClassFile(String className) {
-		return findFileInClassesDirs(className.replace(".", "/") + ".class");
-	}
-
-	private File findFileInClassesDirs(String fileName) {
+		String classFileName = className.replace(".", "/") + ".class";
 		for (File classesDir : this.sourceSet.getOutput().getClassesDirs()) {
-			File classFile = new File(classesDir, fileName);
+			File classFile = new File(classesDir, classFileName);
 			if (classFile.isFile()) {
 				return classFile;
 			}
